update Makefile for code taken from zstream

--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -15,6 +15,8 @@ freecwmpd_SOURCES =		\
 	../src/cwmp/local.h	\
 	../src/cwmp/device.h	\
 	../src/cwmp/device.c	\
+	../src/http/b64.h	\
+	../src/http/b64.c	\
 	../src/http/http.h	\
 	../src/http/http.c	\
 	../src/xml/xml.h	\
